# pin-up-ai

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  PRIVACY.md  PRODUCTION_README.md  README.md  SETUP.md  TEST_COVERAGE_ANALYSIS.md
.github/workflows/: ci.yml  release.yml
backend/: .gitignore  _generate.py  alembic.ini  database.py  main.py  models.py  requirements.txt  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_collection_icon_color_updated_at.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  backup.py  collections.py  export_import.py  health.py  license.py  mcp.py  search.py  settings.py  snippets.py  stats.py  tags.py
backend/app/security/: __init__.py  cors.py  logging.py  rate_limit.py  request_id.py
backend/app/services/: __init__.py  backup_service.py  collection_service.py  export_service.py  import_service.py  license_service.py  search_service.py  snippet_service.py  tag_service.py
backend/app/utils/: __init__.py
backend/routers/: collections.py  snippets.py  tags.py
backend/tests/: test_e2e.py
frontend/: .gitignore  create_frontend.py  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.js  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/__tests__/: SearchBar.test.tsx  Toast.test.tsx  WelcomeWizard.test.tsx  helpers.test.ts
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  SearchBar.jsx  SearchBar.tsx  ShortcutHelp.tsx  (+10 more)
mcp/: server.py
mcp/tests/: test_mcp.py
mcp/tools/: __init__.py  create_snippet.py  get_snippet.py  list_collections.py  list_snippets.py  list_tags.py  search_snippets.py
(+10 files in other folders)
