[package]
name = "pin-up-ai"
version = "0.1.0"
description = "Pin-Up AI - AI Message Highlighter"
authors = ["holeyfield33-art"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [
  "shell-open",
  "shell-sidecar",
  "dialog-all",
  "system-tray",
  "process-relaunch",
  "updater",
] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
portpicker = "0.1"
dirs = "5"
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
